--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ gtag('config', 'G-H1JW8YBDZ8');
 
 
 
-    <div class="insight-section" style="max-width: 900px; margin: 0 auto 100px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+ <div class="insight-section" style="max-width: 900px; margin: 0 auto 100px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <input type="radio" name="insight-view" id="view-spring" checked style="display: none;">
   <input type="radio" name="insight-view" id="view-winter" style="display: none;">
@@ -619,7 +619,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     .insight-card-wrapper {
       position: relative;
       width: 100%;
-      min-height: 620px; 
+      min-height: 580px; 
       perspective: 1000px;
     }
     .insight-card {
@@ -639,23 +639,21 @@ gtag('config', 'G-H1JW8YBDZ8');
       justify-content: space-between;
       opacity: 0;
       visibility: hidden;
-      transform: translateY(20px);
     }
 
-    /* Radio Button Logic for Switching */
+    /* Radio Control Logic */
     #view-spring:checked ~ .insight-card-wrapper .card-spring,
     #view-winter:checked ~ .insight-card-wrapper .card-winter,
     #view-fall:checked ~ .insight-card-wrapper .card-fall {
       opacity: 1;
       visibility: visible;
-      transform: translateY(0);
       z-index: 2;
     }
 
     .nav-container {
       display: flex;
       gap: 10px;
-      margin-top: 20px;
+      margin-top: 15px;
       flex-wrap: wrap;
     }
 
@@ -665,11 +663,11 @@ gtag('config', 'G-H1JW8YBDZ8');
       align-items: center;
       gap: 8px;
       color: #94a3b8;
-      font-size: 10px;
+      font-size: 11px;
       font-weight: 800;
       text-transform: uppercase;
       letter-spacing: 1px;
-      padding: 10px 16px;
+      padding: 10px 18px;
       border: 1.2px solid rgba(148, 163, 184, 0.3);
       border-radius: 50px;
       transition: all 0.2s;
@@ -678,14 +676,14 @@ gtag('config', 'G-H1JW8YBDZ8');
     .nav-btn:hover {
       background: rgba(201,138,46,0.1);
       color: #c98a2e;
+      border-color: #c98a2e;
     }
 
-    /* Active Button Styling */
     #view-spring:checked ~ .nav-container .btn-spring,
     #view-winter:checked ~ .nav-container .btn-winter,
     #view-fall:checked ~ .nav-container .btn-fall {
-      background: #c98a2e;
-      color: white;
+      background: rgba(201,138,46,0.2);
+      color: #c98a2e;
       border-color: #c98a2e;
     }
 
@@ -700,9 +698,8 @@ gtag('config', 'G-H1JW8YBDZ8');
       .insight-card { padding: 25px 20px; }
     }
     @media (max-width: 480px) {
-      .insight-card-wrapper { min-height: 1080px; }
+      .insight-card-wrapper { min-height: 1050px; }
       .insight-card { padding: 20px 15px; }
-      .nav-btn { width: 100%; justify-content: center; }
     }
   </style>
 
@@ -713,7 +710,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px;">
           <div style="display: flex; align-items: center;">
             <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path></svg>
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
             </div>
             <h3 style="font-size: 22px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
           </div>
@@ -723,16 +720,19 @@ gtag('config', 'G-H1JW8YBDZ8');
           </span>
         </div>
 
-        <div style="font-size: 14.5px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
-          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Cancun, Mexico: Technical Assessment</p>
-          <p style="margin-bottom: 12px;">
-            <strong>Logistics:</strong> Friday departure (04:00) via SAT-AUS-DFW-CUN. Arrival focused on site verification and green speed calibration. Finalized prep with intensive range and putting sessions until sunset to adjust to local turf and wind.
+        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener: Cancun, Mexico (Technical Assessment)</p>
+          <p style="margin-bottom: 15px;">
+            Travel Logistics & Acclimatization: Friday departure (04:00) via San Antonio – Austin – Dallas – Cancun. Initial arrival focused on site verification and putting green calibration. Pre-tournament preparation included a full team practice round followed by intensive range and putting sessions until sunset to finalize feel under local conditions. Prioritized recovery with 10-hour rest period prior to Round 1.
           </p>
-          <p style="margin-bottom: 12px;">
-            <strong>R1-R2 Data:</strong> High-wind conditions exposed inconsistent off-the-tee accuracy. Scoring was stabilized through high-efficiency scrambling, including a 100% conversion rate on 8 birdie opportunities in R1. Back-nine dispersion in R2 resulted in scoring erosion, mitigated by par-save execution.
+          <p style="margin-bottom: 15px;">
+            Round 1 Analysis: High-wind conditions with inconsistent off-the-tee accuracy. Scoring was stabilized through high-efficiency short-game execution. Successfully converted 8/8 birdie opportunities, including long-range putts, maintaining momentum despite technical challenges.
           </p>
-          <p style="margin-bottom: 12px;">
-            <strong>R3 & Result:</strong> Improved driver alignment and adjustment to difficult pin positions. Carded -1 for the round (Total E, T3). Technical data acquired confirms <strong>driver accuracy recalibration</strong> as the primary focus for the upcoming home event.
+          <p style="margin-bottom: 15px;">
+            Round 2 Analysis: Continued driver dispersion issues led to an early double bogey. Recovered to -1 at the turn via 3 birdies, but dropped 4 strokes on the back nine (Double-Bogey/Bogey/Bogey sequence). Prevented further scoring erosion through consistent scramble and par-save execution. Carded 75 (+3), entering the final round T2, 4 strokes off the lead.
+          </p>
+          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">
+            Round 3 & Final Result: Improved driver alignment. Managed difficult pin positions and persistent wind through technical adjustments. Recorded 2 birdies and 1 bogey, narrowly missing two additional birdie opportunities on the closing holes due to lip-outs. Finished -1 for the round, Total E, T3 for the tournament. Technical focus remains on driver accuracy recalibration for the upcoming home event.
           </p>
         </div>
       </div>
@@ -741,22 +741,32 @@ gtag('config', 'G-H1JW8YBDZ8');
 
     <div class="insight-card card-winter">
       <div>
-        <div style="display: flex; align-items: center; margin-bottom: 25px;">
-          <div style="background: rgba(148, 163, 184, 0.1); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(148, 163, 184, 0.3);">
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+        <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px;">
+          <div style="display: flex; align-items: center;">
+            <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+            </div>
+            <h3 style="font-size: 22px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
           </div>
-          <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Winter Prep Analysis</h3>
+          <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
+            <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+            CURRENT FOCUS
+          </span>
         </div>
-        <div style="font-size: 14.5px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px;">
-          <p style="margin: 0 0 15px 0; color: #fff; font-weight: 700; font-size: 17px;">Pre-Season Calibration</p>
+
+        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Winter Preparation & Competitive Assessment</p>
           <p style="margin-bottom: 15px;">
-            January training focused on refining <strong>long-iron dispersion</strong> and reinforcing <strong>short-game execution</strong>. Data from Jan 22–23 qualifying rounds reflected improved ball-striking consistency under competitive pressure.
+            January training was structured around refining <strong>long-iron dispersion</strong> and reinforcing <strong>short-game execution</strong>, with the objective of stabilizing scoring opportunities from mid-to-long range.
           </p>
           <p style="margin-bottom: 15px;">
-            A separate data point was recorded in R3 while testing aggressive driving lines in a high-margin scenario, providing feedback on driver control under full-power execution.
+            Performance during the Jan 22–23 qualifying rounds (R1–R2) reflected improved ball-striking consistency under competitive conditions. During Round 3, a separate data point was recorded as Joshua tested aggressive driving lines on the Oaks Course in a <strong>high-margin scenario</strong>. This round provided useful feedback on driver control and decision-making under full-power execution.
           </p>
-          <p style="margin-bottom: 0;">
-            Corrective sessions at TPC San Antonio followed to recalibrate alignment and reestablish performance benchmarks ahead of the season opener.
+          <p style="margin-bottom: 15px;">
+            A corrective training session followed on Jan 29 at TPC San Antonio, focusing on driver alignment and short-game touch to recalibrate feel and reestablish R1–R2 performance benchmarks.
+          </p>
+          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">
+            Preparation continues with the goal of entering the Spring season fully calibrated and ready to contribute consistently across all competitive rounds.
           </p>
         </div>
       </div>
@@ -771,35 +781,29 @@ gtag('config', 'G-H1JW8YBDZ8');
           </div>
           <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
         </div>
+
         <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; font-style: italic;">
-          <p style="margin: 0 0 15px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus</p>
-          <p style="margin-bottom: 15px;">
-            Technical review following the Patriot All-America Invitational identified long-iron proximity as a key area for off-season development.
+          <p style="margin: 0 0 18px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus</p>
+          <p style="margin-bottom: 18px;">
+            The Patriot All-America Invitational served as a competitive reference point against a national amateur field, including several of the top collegiate players. Following the event, a technical review identified <strong>long-iron performance</strong> as an area for improvement ahead of Spring qualifying.
           </p>
-          <p style="margin-bottom: 15px;">
-            In coordination with coaching staff, January was dedicated to individual technical training to address identified dispersion areas prior to the Spring competitive schedule.
+          <p style="margin-bottom: 18px;">
+            In coordination with the UTSA coaching staff, a short-term adjustment was approved for Joshua to remain on campus and continue <strong>individual training during January</strong> rather than participate in the scheduled team trip.
           </p>
           <p style="margin-bottom: 0;">
-            Preparation continues within the UTSA program framework to ensure consistent contribution across team events.
+            This period was used to address identified technical areas prior to Spring qualifying rounds and subsequent team events. Joshua continues preparation within the UTSA program for the Spring season.
           </p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">ARCHIVED: DEC 2025</div>
+      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">LAST UPDATED: JAN 26, 2026</div>
     </div>
 
   </div>
 
   <div class="nav-container">
-    <label for="view-spring" class="nav-btn btn-spring">
-      <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"></polyline></svg>
-      SPRING OPENER (CANCUN)
-    </label>
-    <label for="view-winter" class="nav-btn btn-winter">
-      VIEW WINTER PREP
-    </label>
-    <label for="view-fall" class="nav-btn btn-fall">
-      VIEW FALL 2025 ARCHIVE
-    </label>
+    <label for="view-spring" class="nav-btn btn-spring">SPRING OPENER (CANCUN)</label>
+    <label for="view-winter" class="nav-btn btn-winter">WINTER PREPARATION</label>
+    <label for="view-fall" class="nav-btn btn-fall">FALL 2025 ARCHIVE</label>
   </div>
 
 </div>
