--- a/index.html
+++ b/index.html
@@ -714,6 +714,15 @@ gtag('config', 'G-H1JW8YBDZ8');
             </div>
             <h3 style="font-size: 22px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
           </div>
+         <div class="insight-card card-spring">
+      <div>
+        <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px;">
+          <div style="display: flex; align-items: center;">
+            <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+            </div>
+            <h3 style="font-size: 22px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
+          </div>
           <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
             <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
             SPRING OPENER
@@ -721,18 +730,27 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
 
         <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
-          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener: Cancun, Mexico (Technical Assessment)</p>
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener — Cancun, Mexico</p>
           <p style="margin-bottom: 15px;">
-            Travel Logistics & Acclimatization: Friday departure (04:00) via San Antonio – Austin – Dallas – Cancun. Initial arrival focused on site verification and putting green calibration. Pre-tournament preparation included a full team practice round followed by intensive range and putting sessions until sunset to finalize feel under local conditions. Prioritized recovery with 10-hour rest period prior to Round 1.
+            Travel and arrival were completed early, followed by course and putting green familiarization. Pre-tournament preparation included a team practice round and standard range and putting sessions. A rest period was observed prior to Round 1.
           </p>
           <p style="margin-bottom: 15px;">
-            Round 1 Analysis: High-wind conditions with inconsistent off-the-tee accuracy. Scoring was stabilized through high-efficiency short-game execution. Successfully converted 8/8 birdie opportunities, including long-range putts, maintaining momentum despite technical challenges.
+            Round 1 was played under sustained high-wind conditions. Driver accuracy varied, while scoring stability was maintained through short-game execution. The round concluded at 70 (-2).
           </p>
           <p style="margin-bottom: 15px;">
-            Round 2 Analysis: Continued driver dispersion issues led to an early double bogey. Recovered to -1 at the turn via 3 birdies, but dropped 4 strokes on the back nine (Double-Bogey/Bogey/Bogey sequence). Prevented further scoring erosion through consistent scramble and par-save execution. Carded 75 (+3), entering the final round T2, 4 strokes off the lead.
+            During Round 2, driver dispersion continued to affect play, including an early double bogey. Multiple birdies were recorded on the front nine, followed by dropped strokes on the back nine. Scrambling and par saves limited further score impact. The round concluded at 75 (+3), keeping position within the leading group.
+          </p>
+          <p style="margin-bottom: 15px;">
+            In Round 3, driver alignment showed improvement under continued wind conditions. Pin positions were managed through technical adjustments. The round included two birdies and one bogey, finishing at 71 (-1).
+          </p>
+          <p style="margin-bottom: 15px;">
+            Joshua completed the tournament at Even Par, finishing T3. The final score was below the field scoring average, with two players finishing ahead.
+          </p>
+          <p style="margin-bottom: 15px; color: #fff; font-weight: 700;">
+            As a result of this performance, Joshua’s national ranking moved from No. 523 to No. 403.
           </p>
           <p style="margin-bottom: 0; color: #fff; font-weight: 600;">
-            Round 3 & Final Result: Improved driver alignment. Managed difficult pin positions and persistent wind through technical adjustments. Recorded 2 birdies and 1 bogey, narrowly missing two additional birdie opportunities on the closing holes due to lip-outs. Finished -1 for the round, Total E, T3 for the tournament. Technical focus remains on driver accuracy recalibration for the upcoming home event.
+            Preparation continues ahead of the next event, with ongoing calibration focused on driver accuracy based on collected competitive data.
           </p>
         </div>
       </div>
