--- a/index.html
+++ b/index.html
@@ -723,14 +723,23 @@ gtag('config', 'G-H1JW8YBDZ8');
             </div>
             <h3 style="font-size: 22px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
           </div>
-          <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
+
+            <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
+
             <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+
             SPRING OPENER
+
           </span>
+
         </div>
 
+
+
         <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
-          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener — Cancun, Mexico</p>
+
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener: Cancun, Mexico (Technical Assessment)</p>
+
           <p style="margin-bottom: 15px;">
             Travel and arrival were completed early, followed by course and putting green familiarization. Pre-tournament preparation included a team practice round and standard range and putting sessions. A rest period was observed prior to Round 1.
           </p>
@@ -752,9 +761,13 @@ gtag('config', 'G-H1JW8YBDZ8');
           <p style="margin-bottom: 0; color: #fff; font-weight: 600;">
             Preparation continues ahead of the next event, with ongoing calibration focused on driver accuracy based on collected competitive data.
           </p>
+
         </div>
+
       </div>
+
       <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">LAST UPDATED: FEB 4, 2026</div>
+
     </div>
 
     <div class="insight-card card-winter">
