--- a/index.html
+++ b/index.html
@@ -726,19 +726,19 @@ gtag('config', 'G-H1JW8YBDZ8');
           </span>
         </div>
 
-        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
-          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener — Cancun, Mexico</p>
-          <p style="margin-bottom: 12px;">Travel and arrival were completed early, followed by course and putting green familiarization. Pre-tournament preparation included a team practice round and standard range and putting sessions. A rest period was observed prior to Round 1.</p>
-          <p style="margin-bottom: 12px;">Round 1 was played under sustained high-wind conditions. Driver accuracy varied, while scoring stability was maintained through short-game execution. The round concluded at 70 (-2).</p>
-          <p style="margin-bottom: 12px;">During Round 2, driver dispersion continued to affect play, including an early double bogey. Multiple birdies were recorded on the front nine, followed by dropped strokes on the back nine. Scrambling and par saves limited further score impact. The round concluded at 75 (+3), keeping position within the leading group.</p>
-          <p style="margin-bottom: 12px;">In Round 3, driver alignment showed improvement under continued wind conditions. Pin positions were managed through technical adjustments. The round included two birdies and one bogey, finishing at 71 (-1).</p>
-          <p style="margin-bottom: 12px;">Joshua completed the tournament at Even Par, finishing T3. The final score was below the field scoring average, with two players finishing ahead.</p>
-          <p style="margin-bottom: 12px; color: #fff; font-weight: 700;">As a result of this performance, Joshua’s national ranking moved from No. 523 to No. 403.</p>
-          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Preparation continues ahead of the next event, with ongoing calibration focused on driver accuracy based on collected competitive data.</p>
-        </div>
-      </div>
-      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">LAST UPDATED: FEB 4, 2026</div>
-    </div>
+    <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
+  <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener — Cancun, Mexico</p>
+  <p style="margin-bottom: 12px;">Early travel and arrival were followed by course and putting green familiarization. Pre-tournament preparation included a team practice round and standard range and putting sessions. A rest period was observed prior to Round 1.</p>
+  <p style="margin-bottom: 12px;">Round 1 was played in high-wind conditions. Driver accuracy varied, while scoring was maintained through short-game execution. The round concluded at 70 (-2).</p>
+  <p style="margin-bottom: 12px;">In Round 2, driver dispersion affected play, including an early double bogey. Birdies on the front nine were followed by dropped strokes on the back nine. Scrambling limited further score impact. The round concluded at 75 (+3).</p>
+  <p style="margin-bottom: 12px;">Round 3 showed improved driver alignment under continued wind conditions. The round concluded at 71 (-1).</p>
+  <p style="margin-bottom: 12px;">Joshua finished the tournament at Even Par, placing T3, with only two players ahead.</p>
+  <p style="margin-bottom: 12px; color: #fff; font-weight: 700;">As a result, his national ranking moved from No. 523 to No. 403.</p>
+  <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Preparation continues with ongoing driver accuracy calibration.</p>
+</div>
+</div>
+<div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">LAST UPDATED: FEB 4, 2026</div>
+</div>
 
     <div class="insight-card card-winter">
       <div>
