--- a/index.html
+++ b/index.html
@@ -728,7 +728,9 @@ gtag('config', 'G-H1JW8YBDZ8');
 
     <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
   <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Spring Season Opener — Cancun, Mexico</p>
-  <p style="margin-bottom: 12px;">Early travel and arrival were followed by course and putting green familiarization. Pre-tournament preparation included a team practice round and standard range and putting sessions. A rest period was observed prior to Round 1.</p>
+ <p style="margin-bottom: 12px;">
+Travel began before 4:00 a.m., including ground transportation from San Antonio to Austin, followed by connecting flights through Dallas to Cancun. Upon arrival, preparation focused on course and putting green familiarization ahead of competition.
+</p>
   <p style="margin-bottom: 12px;">Round 1 was played in high-wind conditions. Driver accuracy varied, while scoring was maintained through short-game execution. The round concluded at 70 (-2).</p>
   <p style="margin-bottom: 12px;">In Round 2, driver dispersion affected play, including an early double bogey. Birdies on the front nine were followed by dropped strokes on the back nine. Scrambling limited further score impact. The round concluded at 75 (+3).</p>
   <p style="margin-bottom: 12px;">Round 3 showed improved driver alignment under continued wind conditions. The round concluded at 71 (-1).</p>
