--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -796,7 +796,7 @@
       </a>
     </div>
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
-    <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">WAGR Power: TBD / Pts: TBD</div>
+    <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">Rank Impact: 136 | SG: 0.35 | Weighted Pts: 54.06 | WAGR Power: TBD / Pts: TBD</div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value" style="font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
       <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value" style="font-weight: 800;">215</span></div>
@@ -1301,7 +1301,7 @@
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; margin-bottom: 35px;">
       <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
-        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">341-100-13</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
         <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 70.1%</div>
         <div style="display: inline-block; font-size: 13px; color: #806600; margin-top: 10px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
       </div>
